--- a/html/table.html
+++ b/html/table.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table{
+            border: 1px solid black;
+        }
+        td,th{
+            border: 1px solid black;
+            /* padding: 10px; */
+        }
+        table,td,th{
+            /* border-spacing: 10px; */
+            border-collapse: collapse;
+        }
+        td{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <table>
