--- a/html/table.html
+++ b/html/table.html
@@ -35,34 +35,29 @@
             <tr>
                 <td>1</td>
                 <td>Hemanathan</td>
-                <td>Chengalpattu</td>
-                <td>Chengalpattu</td>
+                <td colspan="2">chennai</td>
+                <!-- <td>chennai</td> -->
             </tr>
             <tr>
                 <td>2</td>
                 <td>Jeyavarhan</td>
-                <td>coimbatur</td>
-                <td>Thiruvanmiyur</td>
+                <td rowspan="3">banglore</td>
+                <td rowspan="3">chennai</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Purushothaman</td>
-                <td>Guduvancheri</td>
-                <td>Guduvancheri</td>
+                <!-- <td >banglore</td> -->
+                <!-- <td>chennai</td> -->
             </tr>
             <tr>
                 <td>4</td>
                 <td>Solo</td>
-                <td>Chennai</td>
-                <td>Chengalpattu</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Solo</td>
-                <td>Chennai</td>
-                <td>Chengalpattu</td>
+                <!-- <td>banglore</td> -->
+                <!-- <td>chennai</td> -->
             </tr>
         </tbody>
     </table>
+
 </body>
 </html>
