--- a/html/tableTask1.html
+++ b/html/tableTask1.html
@@ -87,5 +87,50 @@
             <!-- <td>1</td> -->
         </tr>
     </table>
+    <br>
+    <table>
+        <tr>
+            <td>Time Table</td>
+            <td>10AM-12PM</td>
+            <td>12PM-2PM</td>
+            <td>2PM-3PM</td>
+            <td>3PM-5PM</td>
+        </tr>
+        <tr>
+            <td>MONDAY</td>
+            <td>Python</td>
+            <td>Web</td>
+            <td rowspan="5">Lunch Break</td>
+            <td>SQL</td>
+        </tr>
+        <tr>
+            <td>TUESDAY</td>
+            <td>SQL</td>
+            <td>Django</td>
+            <!-- <td>Lunch Break</td> -->
+            <td>Python</td>
+        </tr>
+        <tr>
+            <td>WEDNESDAY</td>
+            <td>Web</td>
+            <td>Python</td>
+            <!-- <td>Lunch Break</td> -->
+            <td>Django</td>
+        </tr>
+        <tr>
+            <td>THURSDAY</td>
+            <td>Django</td>
+            <td>SQL</td>
+            <!-- <td>Lunch Break</td> -->
+            <td>Python</td>
+        </tr>
+        <tr>
+            <td>FRIDAY</td>
+            <td>Python</td>
+            <td>Web</td>
+            <!-- <td>Lunch Break</td> -->
+            <td>Web</td>
+        </tr>
+    </table>
 </body>
 </html>
