semantic,multimedia,iframe added

--- a/html/iframeking.html
+++ b/html/iframeking.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./queen.html"><img src="https://cdn.pixabay.com/photo/2013/07/13/13/46/playing-card-161495_1280.png" >King</a>
-    
+    <iframe src="../html/king.html" frameborder="1" height="500px" width="500px"></iframe>
 </body>
 </html>
