--- a/html/queen.html
+++ b/html/queen.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./king.html"><img src="https://cdn.pixabay.com/photo/2021/12/15/10/21/chess-6872239_1280.jpg" width="100px" height="100px">Queen</a>
+    <a href="./king.html"><img src="https://cdn.pixabay.com/photo/2013/07/13/13/46/playing-card-161491_1280.png" >Queen</a>
 </body>
 </html>
