--- a/html/semantic.html
+++ b/html/semantic.html
@@ -10,6 +10,11 @@
             text-align: center;
             background-color: aqua;
         }
+        footer{
+            border: 1px solid black;
+            text-align: center;
+            background-color: aqua;
+        }
         nav{
             border: 1px solid black;
             height: 50px;
@@ -34,6 +39,9 @@
         #right-side{
             width: 70%;
         }
+        time{
+            background-color: cadetblue;
+        }
     </style>
 </head>
 <body>
@@ -53,18 +61,34 @@
     <main>
         <section id="left-side">
             <aside>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium officia, rem dolor eius explicabo mollitia, eaque at laboriosam iure architecto necessitatibus! In dolores odit autem.
+                <p>
+                    Lorem ipsum dolor sit amet <time>10:00 am</time> consectetur adipisicing elit. <mark> Praesentium officia, rem dolor eius explicabo mollitia, eaque at laboriosam iure architecto necessitatibus! In dolores odit autem.</mark>
+                </p>
+                <details>
+                    <summary>Electronics</summary>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat dolorum culpa id consequuntur ut illo, obcaecati sapiente corrupti. Ipsum deleniti commodi quisquam! Atque, laudantium totam?
+                    </p>
+                </details>
             </aside>
         </section>
 
         <section id="right-side">
             <article>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ullam molestias neque ab ratione cum fugiat, saepe hic eius quae earum culpa corrupti aperiam consequatur?
+
+                <figure>
+                    <img src="https://media.istockphoto.com/id/1192236158/photo/explosion-of-colored-powder-on-black-background.jpg?s=1024x1024&w=is&k=20&c=h7vSosF9lqaJ0Cl0NPNVBmV2ymMZSATGcfZv-SIMH7c=" alt="" width="100px" height="100px">
+                    <figcaption>fig 1.1 : img1</figcaption>
+                </figure>
             </article>
             <article>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore ipsum quia harum culpa ab, alias ratione nobis tempore. Animi odit non vero. Sapiente, odit minus.
             </article>
         </section>
     </main>
+    <footer>
+        <h1> @Copywrite by Times Of India</h1>
+    </footer>
 </body>
 </html>
