structural pseudo class

--- a/html/StructuralPseudoclass.html
+++ b/html/StructuralPseudoclass.html
@@ -9,11 +9,17 @@
 <body>
     <h1>Structural pseudo class</h1>
     <div>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <i>This is italic 1</i>
+        <p>child 1</p>
+        <p>child 2</p>
+        <i>This is italic 2</i>
+        <p>child 3</p>
+        <p>child 4</p>
+        <i>This is italic 3</i>
+        <p>child 5</p>
+        <p>child 6</p>
+        <i>This is italic 4</i>
+        
     </div>
 </body>
 </html>
