Background Image Task

--- a/html/BackgroundImgTask.html
+++ b/html/BackgroundImgTask.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="maindiv">
-
+        <h1>This is my content</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam numquam eaque possimus atque id et, esse ea iusto nihil odio blanditiis architecto rerum! Illum in eos, laborum quae error repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur deleniti ipsum facere ipsa blanditiis ipsam itaque esse fugit illo, quos quod aliquam dolore culpa nihil, provident sequi ullam possimus maxime necessitatibus, libero doloribus exercitationem assumenda. Nulla ut accusamus deleniti, eos vel inventore perspiciatis! Iste distinctio voluptatum labore. Quos, reiciendis delectus eaque dolorum ducimus eius recusandae voluptatum dignissimos optio architecto cumque voluptatibus at quibusdam mollitia ea. Officia, vero quis. Culpa laboriosam architecto illum aliquam dolorem nihil voluptate quos cupiditate! Perspiciatis corrupti dolor porro voluptas consequuntur? Odio, fuga! Reprehenderit nihil cum mollitia in pariatur quae beatae magnam porro molestiae ab! Non modi amet eligendi corrupti maxime quam. Id, est. Sint, aspernatur quae. Quis saepe earum ut excepturi fugiat assumenda porro tempora cupiditate nihil nesciunt dolores facere voluptate eligendi impedit error nam corrupti, unde maiores quos. Tempore natus officia temporibus nobis nesciunt laudantium. Animi veritatis aspernatur, blanditiis quidem, nihil repellendus, quaerat ducimus magni similique porro esse accusamus est ea alias! Alias expedita asperiores ratione vitae quam mollitia rerum facilis beatae voluptates doloremque rem perferendis accusantium quas officiis animi tempore sed corporis itaque explicabo, impedit numquam? Illum magni maxime fugiat non nemo mollitia quis blanditiis tempore quam, praesentium libero quod vel cupiditate voluptatem quae!</p>
     </div>
 </body>
 </html>
