--- a/html/Position.html
+++ b/html/Position.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="../css/Position.css">
 </head>
 <body>
-    <div id="parent">
-        <!-- <p id="para1">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil facilis quaerat odio vero odit nulla mollitia? Est explicabo dicta consequatur, accusantium esse fuga cumque inventore eum rem quas perferendis veritatis?
-        </p> -->
-
-        <article id="child1" class="child">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quasi illum nobis dolor architecto, commodi perferendis necessitatibus sit unde eum illo sed doloribus beatae temporibus inventore cupiditate dolorum nam iure!
-        </article>
-
-        <article id="child2" class="child">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam cum blanditiis nobis esse vero libero ex sapiente dolores! Minima minus soluta aliquid voluptates, dolorum laboriosam fugit qui asperiores commodi voluptatum.
-        </article>
-        <article id="child3" class="child">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam cum blanditiis nobis esse vero libero ex sapiente dolores! Minima minus soluta aliquid voluptates, dolorum laboriosam fugit qui asperiores commodi voluptatum.
-        </article>
+    <div id="gp">
+        <div id="parent">
+            <!-- <p id="para1">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil facilis quaerat odio vero odit nulla mollitia? Est explicabo dicta consequatur, accusantium esse fuga cumque inventore eum rem quas perferendis veritatis?
+            </p> -->
+    
+            <article id="child1" class="child">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quasi illum nobis dolor architecto, commodi perferendis necessitatibus sit unde eum illo sed doloribus beatae temporibus inventore cupiditate dolorum nam iure!
+            </article>
+    
+            <article id="child2" class="child">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam cum blanditiis nobis esse vero libero ex sapiente dolores! Minima minus soluta aliquid voluptates, dolorum laboriosam fugit qui asperiores commodi voluptatum.
+            </article>
+            <article id="child3" class="child">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam cum blanditiis nobis esse vero libero ex sapiente dolores! Minima minus soluta aliquid voluptates, dolorum laboriosam fugit qui asperiores commodi voluptatum.
+            </article>
+        </div>
     </div>
 </body>
 </html>
