--- a/html/PositionTask.html
+++ b/html/PositionTask.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="../css/PositionTask.css">
 </head>
 <body>
-    <div id="parent">
-        <h1 id="child1" class="child">This Is H1 Tag</h1>
-        <p id="child2" class="child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vitae? Ipsa tempora accusantium deserunt perspiciatis culpa eum molestias voluptatibus, vero harum, quo commodi. Sunt, accusamus pariatur officiis iusto sed totam.</p>
+    <div id="maindiv">
+        <div id="bgdiv">
+
+        </div>
+        <div id="content">
+            <h1 id="child1" class="child">This Is H1 Tag</h1>
+            <p id="child2" class="child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vitae? Ipsa tempora accusantium deserunt perspiciatis culpa eum molestias voluptatibus, vero harum, quo commodi. Sunt, accusamus pariatur officiis iusto sed totam.</p>
+        </div>
     </div>
 </body>
 </html>
