--- a/html/Transform.html
+++ b/html/Transform.html
@@ -13,10 +13,6 @@
     <button>Submit</button>
 <br>
 <br>
-    <div id="cir1">
-        <div id="cir2">
-
-        </div>
-    </div>
+    <div id="cir1"></div>
 </body>
 </html>
