--- a/html/TransformTask.html
+++ b/html/TransformTask.html
@@ -9,10 +9,18 @@
 <body>
     <div id="main-div">
         <div id="content-1">
-            <img src="../image/background.jpg" alt="">
+            <div id="innerdiv-1">
+            <h1>content</h1>
+            <p class="para-common">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi sint minima maiores? Repudiandae, sint corrupti! Dolorum reprehenderit molestias quas, laboriosam, soluta esse, nostrum at ullam officiis accusantium accusamus sit </p>
+            </div>
+            <p class="btn"><button>Add to cart</button></p>
         </div>
         <div id="content-2">
-            
+            <div id="innerdiv-2">
+                <h1>content</h1>
+                <p class="para-common">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi sint minima maiores? Repudiandae, sint corrupti! Dolorum reprehenderit molestias quas, laboriosam, soluta esse, nostrum at ullam officiis accusantium accusamus sit </p>
+                </div>
+                <p class="btn"><button>Add to cart</button></p>
         </div>
 
         
