--- a/html/AnimationEmoji.html
+++ b/html/AnimationEmoji.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="../css/AnimationEmoji.css">
 </head>
 <body>
-    <div id="face">
-        <div id="eye1" class="eyes">
-            <div id="eyeball1" class="eyeball">
-
+    <div id="divisionhead">
+        <div id="divisioneye1">
+            <div id="divisionskin1">
+                <span id="eyeball1" ></span>
             </div>
         </div>
-        <div id="eye2" class="eyes">
-            <div id="eyeball2" class="eyeball">
-
+        <div id="divisioneye2">
+            <div id="divisionskin2">
+                <span id="eyeball2"></span>
             </div>
         </div>
-        <div id="mouth">
-
+        <div id="divisionmouth">
+            
         </div>
     </div>
 </body>
