Document Object Model

--- a/html/script.html
+++ b/html/script.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../js/script.js">
+    <!-- <script src="../js/script.js">
         console.log("Hii da Thayolii")
         console.log("poda sunni")
         // console.log(a)  //we will get uncaught reference error
         console.log("hiii")
-    </script>
+    </script> -->
+    <script src="../js/script.js" type="module"></script>
 </body>
 </html>
